Quartz sync: Sep 9, 2024, 1:39 AM

--- a/content/Luke 17-32.md
+++ b/content/Luke 17-32.md
@@ -1,12 +1,13 @@
 ---
-title: “Remember Lot’s Wife” - Luke 17:32
+title: 📖 “Remember Lot’s Wife” - Luke 17:32
 draft: false
 tags:
   - blog
   - entry
+  - bible
+  - biblical
+date: 2024-09-07
 ---
-*Written on September 07, 2024*
-
 > [!warning] Quick Note
 > I read a lot of *biblical text* although I am not religious. I just find them *facinating*, and you can learn *a lot* of lessons from them even if you don’t believe.
 
