Quartz sync: Sep 9, 2024, 2:04 AM

--- a/content/Luke 17-32.md
+++ b/content/Luke 17-32.md
@@ -23,6 +23,8 @@ Most of us who have *some* Christian knowledge will remember Lot’s wife from t
 
 So what this basically means is that whenever *we move past* something that we are not meant to *stay* in, do not long to be back. All of those *fond* memories are just **memories** now. We’ve been there already, and we are out *for a reason*. Do we understand the reason *right now*? Maybe not, but one day *we will*.
 
+> [!warning] **Rambling Ahead!**
+
 Personally, I have an experience *close to heart* with this. I have just recently broken up with my partner after four years. But, this was our *second* break-up. The first time, I have decided to break up with her because I did not feel *appreciated* in our relationship. I felt that whatever I do, she’d always found a reason *why* it will not work in the long run. It broke my heart every time, because I *gave* what I *could* do at that time to make her *contented*, but I still feel that I was *lacking* for her. So, I decided to move on with my life and to stop fighting *for* someone that should have been fighting *with* me.
 
 But, I was young and naive, after about six weeks, the feeling of *longing* and *sadness* took over me. I decided to *chase after her* again. To cut the long story short, we got back together. Things felt *different*. She placed *more effort* and thought for me and our relationship. *It felt great*. I felt *appreciated*. It felt like *I was right to go back*. But then, months later, she started avoiding me. I tried to be understanding since she was a few months away from graduating that time, but something *felt off*.
