Quartz sync: Sep 20, 2024, 10:30 AM

--- a/content/🌲 Evergreens/Luke 17-32.md
+++ b/content/🌲 Evergreens/Luke 17-32.md
@@ -2,11 +2,11 @@
 title: 📖 “Remember Lot’s Wife” - Luke 17:32
 draft: false
 tags:
-  - blog
-  - entry
   - bible
   - biblical
-  - movingOn
+  - moving-on
+  - 🌲evergreen
+  - reminisce
 date: 2024-09-07
 ---
 > [!warning] Quick Note
